# UsovikTask

./: Dockerfile  README.md  deployment.yml  docker-compose.yml  docker-entrypoint.sh  ingress.yml  main.py  pyproject.toml  service.yml
csv/: test_proba.csv
csv_manager/: csv_manager.py
neural_net/: predict_proba.py
